# wireguard-simple-manager

./: .gitignore  Cargo.toml  README.md
src/: client_config.rs  config.rs  guess_address.rs  ip_utils.rs  lib.rs  main.rs  peers_meta.rs  wg_key.rs
