[package]
name = "wireguard-simple-manager"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64_21 = {version = "0.21", package = "base64"}
base64 = "0.22"
camino = { version = "1.1.7", features = ["serde1"] }
clap = { version = "4.5.9", features = ["derive"] }
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
defguard_wireguard_rs = "0.4.2"
indexmap = { version = "2.2.6", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
snafu = { version = "0.8.4", features = ["rust_1_61"] }
toml = { version = "0.8.15", features = ["preserve_order"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
tempfile = "3.10.1"
display-error-chain = "0.2.0"
time = "0.3.36"
humantime = "2.1.0"
typed-builder = "0.19.1"
